@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.38 (Release 175)"
+#define KPPPVERSION "1.5.39 (Release 176)"
 #endif
